--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,7 +142,6 @@ allow 144.24.197.112;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
-allow 146.70.198.38;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
@@ -248,9 +247,13 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 185.100.85.132;
+allow 185.100.85.22;
+allow 185.100.85.23;
 allow 185.100.87.136;
+allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
+allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
@@ -328,6 +331,9 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
+allow 185.220.101.0;
+allow 185.220.101.1;
+allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -338,9 +344,12 @@ allow 185.220.101.106;
 allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
+allow 185.220.101.11;
 allow 185.220.101.110;
+allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.129;
+allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -351,6 +360,7 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
+allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
@@ -361,6 +371,7 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
+allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.153;
@@ -370,6 +381,7 @@ allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
 allow 185.220.101.159;
+allow 185.220.101.16;
 allow 185.220.101.161;
 allow 185.220.101.162;
 allow 185.220.101.163;
@@ -378,6 +390,7 @@ allow 185.220.101.165;
 allow 185.220.101.166;
 allow 185.220.101.168;
 allow 185.220.101.169;
+allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
 allow 185.220.101.172;
@@ -388,6 +401,7 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
+allow 185.220.101.18;
 allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
@@ -398,8 +412,23 @@ allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
+allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
+allow 185.220.101.2;
+allow 185.220.101.20;
+allow 185.220.101.21;
+allow 185.220.101.22;
+allow 185.220.101.23;
+allow 185.220.101.24;
+allow 185.220.101.25;
+allow 185.220.101.26;
+allow 185.220.101.27;
+allow 185.220.101.28;
+allow 185.220.101.29;
+allow 185.220.101.3;
+allow 185.220.101.30;
+allow 185.220.101.31;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -408,6 +437,7 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
+allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -418,6 +448,7 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
+allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -428,6 +459,7 @@ allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
+allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
@@ -438,6 +470,7 @@ allow 185.220.101.66;
 allow 185.220.101.67;
 allow 185.220.101.68;
 allow 185.220.101.69;
+allow 185.220.101.7;
 allow 185.220.101.70;
 allow 185.220.101.71;
 allow 185.220.101.72;
@@ -448,6 +481,7 @@ allow 185.220.101.76;
 allow 185.220.101.77;
 allow 185.220.101.78;
 allow 185.220.101.79;
+allow 185.220.101.8;
 allow 185.220.101.80;
 allow 185.220.101.81;
 allow 185.220.101.82;
@@ -458,6 +492,7 @@ allow 185.220.101.86;
 allow 185.220.101.87;
 allow 185.220.101.88;
 allow 185.220.101.89;
+allow 185.220.101.9;
 allow 185.220.101.90;
 allow 185.220.101.96;
 allow 185.220.101.97;
@@ -482,7 +517,6 @@ allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
 allow 185.241.208.236;
-allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -619,6 +653,7 @@ allow 193.218.118.133;
 allow 193.218.118.155;
 allow 193.218.118.173;
 allow 193.218.118.178;
+allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
@@ -1421,6 +1456,10 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
+allow 2a06:1700:0:15::1;
+allow 2a06:1700:0:15::2;
+allow 2a06:1700:0:15::3;
+allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1455,6 +1494,10 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::;
+allow 2a0b:f4c2::1;
+allow 2a0b:f4c2::10;
+allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
@@ -1514,6 +1557,19 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
+allow 2a0b:f4c2::12;
+allow 2a0b:f4c2::13;
+allow 2a0b:f4c2::14;
+allow 2a0b:f4c2::15;
+allow 2a0b:f4c2::16;
+allow 2a0b:f4c2::17;
+allow 2a0b:f4c2::18;
+allow 2a0b:f4c2::19;
+allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
+allow 2a0b:f4c2::21;
+allow 2a0b:f4c2::22;
+allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1522,6 +1578,7 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
+allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -1532,6 +1589,7 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
+allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -1542,10 +1600,17 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
+allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::27;
+allow 2a0b:f4c2::28;
+allow 2a0b:f4c2::29;
+allow 2a0b:f4c2::3;
+allow 2a0b:f4c2::30;
+allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
@@ -1573,6 +1638,7 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
+allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1588,6 +1654,11 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
+allow 2a0b:f4c2::5;
+allow 2a0b:f4c2::6;
+allow 2a0b:f4c2::7;
+allow 2a0b:f4c2::8;
+allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1624,6 +1695,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1673,6 +1745,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
