--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -251,6 +251,7 @@ allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
+allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
@@ -514,7 +515,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1454,6 +1454,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
+allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
@@ -1743,6 +1744,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
