--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -500,6 +500,7 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
+deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:15::1;
 deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
