--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -251,6 +251,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
+set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
@@ -514,7 +515,6 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.28;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -1454,6 +1454,7 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
+set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:15::1;
 set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
@@ -1743,6 +1744,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
