--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -147,7 +147,6 @@ allow 146.70.198.38;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -520,8 +519,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.236;
-allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1384,6 +1381,7 @@ allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1437,9 +1435,12 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1782,6 +1783,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1802,7 +1804,6 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
-allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1843,10 +1844,14 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
@@ -1931,6 +1936,7 @@ allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
