--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -171,7 +171,6 @@ allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -232,6 +231,7 @@ allow 178.175.148.245;
 allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
+allow 178.215.224.65;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -825,6 +825,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4002:3f7c::b;
 allow 2001:b030:2422::7234;
@@ -955,6 +956,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 20.79.154.150;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.36.191;
@@ -1024,8 +1026,6 @@ allow 23.129.64.227;
 allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
-allow 23.130.136.194;
-allow 23.130.136.195;
 allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.110;
@@ -1097,7 +1097,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -1748,6 +1747,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1897,6 +1898,7 @@ allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.83.214;
 allow 62.182.84.146;
+allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1999,7 +2001,6 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 91.92.252.98;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
