--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -4,7 +4,6 @@ set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -143,11 +142,9 @@ set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.164.210;
-set_real_ip_from 146.70.198.38;
 set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
-set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -171,6 +168,7 @@ set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -1029,6 +1027,7 @@ set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.110;
+set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
@@ -1072,7 +1071,6 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
-set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
@@ -1097,6 +1095,7 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
@@ -1747,8 +1746,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1853,6 +1850,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
